--- a/frontend/public/locales/pt/translation.json
+++ b/frontend/public/locales/pt/translation.json
@@ -99,31 +99,118 @@
   "practice_learn_p": "Agende a sua imersão individual ou em grupo e desenvolva as suas competencias durante a experiência clínica.",
   "news_h2": "Galeria de Imagens",
   "news_p": "Cada imagem e vídeo conta parte da nossa jornada!",
-  "galery_img":{
-    "img1":"Sala de Formacoes.",
-    "img2":"Aulas de Grupo",
-    "img3":"Salas para teoria à prática em terapia ocupacional.",
-    "img4":"Formacoes exclusivas.",
-    "img5":"Aulas praticas.",
-    "img6":"Avaliacao e Raciocínio Clinico.",
+  "galery_img": {
+    "img1": "Sala de Formacoes.",
+    "img2": "Aulas de Grupo",
+    "img3": "Salas para teoria à prática em terapia ocupacional.",
+    "img4": "Formacoes exclusivas.",
+    "img5": "Aulas praticas.",
+    "img6": "Avaliacao e Raciocínio Clinico.",
     "img7": "Salas para ensino",
-    "img8":"Ativadades Individuais e em grupo.",
-    "img9":"Espaço de convivência.",
-    "img10":"Ambiente acolhedor.",
-    "img11":"Detalhes arquitetônicos.",
-    "img12":"Salas modernas.",
-    "img13":"Equipamentos de última geração.",
-    "img14":"Espaço para eventos.",
-    "img15":"Área de estudos.",
-    "img16":"Laboratório prático.",
-    "img17":"Espaço colaborativo.",
-    "img18":"Ambiente de relaxamento.",
-    "img19":"Atividades práticas",
-    "img20":"Aulas em grupo",
-    "img21":"Demonstrações",
-    "img22":"Espaços de formação",
-    "img23":"Equipamentos",
-    "img24":"Eventos",
-    "img25":"Depoimentos"
-  }
+    "img8": "Ativadades Individuais e em grupo.",
+    "img9": "Espaço de convivência.",
+    "img10": "Ambiente acolhedor.",
+    "img11": "Detalhes arquitetônicos.",
+    "img12": "Salas modernas.",
+    "img13": "Equipamentos de última geração.",
+    "img14": "Espaço para eventos.",
+    "img15": "Área de estudos.",
+    "img16": "Laboratório prático.",
+    "img17": "Espaço colaborativo.",
+    "img18": "Ambiente de relaxamento.",
+    "img19": "Atividades práticas",
+    "img20": "Aulas em grupo",
+    "img21": "Demonstrações",
+    "img22": "Espaços de formação",
+    "img23": "Equipamentos",
+    "img24": "Eventos",
+    "img25": "Depoimentos"
+  },
+  "folowers": {
+    "1": {
+      "comment": "A metodologia é muito prática e facilmente aplicável no dia a dia. Superou minhas expectativas!",
+      "rating": 5,
+      "name": "Rita Maria"
+    },
+    "2": {
+      "comment": "Conteúdo excelente e bem estruturado. Consegui implementar os conhecimentos rapidamente.",
+      "rating": 4,
+      "name": "João Pedro",
+      "role": ""
+    },
+    "3": {
+      "comment": "Aprendi muito mais do que esperava. As técnicas ensinadas são valiosas para qualquer profissional.",
+      "rating": 5,
+      "name": "Mariana Silva",
+      "role": ""
+    },
+    "4": {
+      "comment": "Explicação clara e objetiva. Consegui entender conceitos complexos de forma simples.",
+      "rating": 4,
+      "name": "Carlos Lima",
+      "role": ""
+    },
+    "5": {
+      "comment": "Excelente didática e atenção aos detalhes. Paula tem um dom para ensinar!",
+      "rating": 5,
+      "name": "Ana Paula",
+      "role": ""
+    },
+    "6": {
+      "comment": "Recomendo a todos que querem evoluir na carreira! Curso transformador e prático.",
+      "rating": 5,
+      "name": "Fernanda Souza",
+      "role": ""
+    },
+    "7": {
+      "comment": "Ótimo curso com conteúdo relevante e atual. Aplicação imediata no mercado.",
+      "rating": 4,
+      "name": "João Vitor",
+      "role": ""
+    },
+    "8": {
+      "comment": "O melhor curso que já fiz! A Paula tem uma capacidade incrível de transmitir conhecimento.",
+      "rating": 5,
+      "name": "Clara Mendes",
+      "role": ""
+    }
+  },
+  "folowers_h2": "O que dizem sobre nós",
+  "folowers_p": "Conheça a experiência de nossos clientes com nossos cursos e mentorias",
+  "contact_form_h2": "Entre em Contato",
+  "contact_our_valor1": "Na Paula Serrano, valorizamos cada ligação com os nossos clientes. Seja para esclarecer dúvidas, receber feedback valioso ou simplesmente trocar uma ideia, a nossa equipa está sempre pronta para ouvir e ajudar.",
+  "contact_our_valor2": "Utilize nosso formulário de contato para:",
+  "contact_our_benefits1": "Solicitar orçamentos personalizados",
+  "contact_our_benefits2": "Obter informações técnicas sobre os nossos produtos",
+  "contact_our_benefits3": "Dar sugestões para melhorarmos os nossos serviços",
+  "contact_contact_imediatly":  "Para um atendimento imediato durante o horário comercial (Seg-Sex: 9h-18h), também pode contactar-nos diretamente pelo telefone (+351) 965 430 026. Garantimos uma resposta por e-mail em até 24 horas úteis para todas as mensagens recebidas.",
+  "contact_us_form_h2": "Envie-nos uma mensagem",
+  "contact_us_form_name": "Nome",
+  "contact_us_form_name_placeholder": "Digite seu nome completo",
+  "contact_us_form_email": "Email",
+  "contact_us_form_subject": "Assunto",
+  "contact_us_form_subject_1": "Selecione um assunto",
+  "contact_us_form_subject_2": "Dúvida sobre produtos",
+  "contact_us_form_subject_3": "Solicitar orçamento",
+  "contact_us_form_subject_4": "Feedback",
+  "contact_us_form_subject_5": "Outro assunto",
+  "contact_us_form_messag": "Messagem",
+  "contact_us_form_messag_placeholder": "Escreva sua mensagem detalhada aqui...",
+  "contact_us_form_button": "Enviar messagem",
+  "sended": "Enviado...",
+  "schedule": "Horario",
+  "mon-fri": "Segunda - Sexta",
+  "phone": "Telephone",
+  "phone_info": "(Chamada para rede móvel nacional)",
+  "adress": "Morada",
+  "cust_area": "Área do client",
+  "ac_o1": "A minha conta",
+  "ac_o2": "Encomendas",
+  "ac_o3": "Entregas",
+  "ac_o4": "Perguntas Frequentes",
+  "info": "INFORMAÇÕES",
+  "info_o1": "Política de Privacidade",
+  "info_o2": "Política de Cookies",
+  "info_o3": "Termos e condições",
+  "info_o4": "Livro de Reclamações"
 }
