[UPDATE] translate botton Footer.tsx

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -211,5 +211,7 @@
   "info_o1": "Privacy Policy",
   "info_o2": "Cookie Policy",
   "info_o3": "Terms and Conditions",
-  "info_o4": "Complaints Book"
+  "info_o4": "Complaints Book",
+  "footer_botton": "Paula Serrano. All rights reserved."
+
 }
