--- a/frontend/public/locales/pt/translation.json
+++ b/frontend/public/locales/pt/translation.json
@@ -212,5 +212,6 @@
   "info_o1": "Política de Privacidade",
   "info_o2": "Política de Cookies",
   "info_o3": "Termos e condições",
-  "info_o4": "Livro de Reclamações"
+  "info_o4": "Livro de Reclamações",
+  "footer_botton": "Paula Serrano. Todos os direitos reservados."
 }
